--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -119,6 +119,8 @@
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
+\newcommand{\progders}[1]{\mathsf{Ders}[ #1 ]}
+
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
 
 \newcommand{\relinvs}[2]{\mathsf{RelInvs}[ #1, #2 ]}
@@ -129,11 +131,15 @@
 
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
 
+\newcommand{\rulexts}{\mathsf{RuleExts}}
+
 \newcommand{\rulepreds}[1]{\mathsf{preds}[ #1 ]}
 
 \newcommand{\rulesucc}[1]{\mathsf{succ}[ #1 ]}
 
 \newcommand{\sinkof}[1]{\mathsf{sink}[ #1 ]}
+
+\newcommand{\solutions}[1]{ \mathsf{Solns}[ #1 ] }
 
 \newcommand{\solvechc}{\textsc{SolveCHC}\xspace}
 
@@ -157,7 +163,7 @@
 
 \newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
 
-\newcommand{\symstep}[2]{\psi[ #1 ; #2 ]}
+\newcommand{\symstep}[1]{\mathsf{SymStep}[ #1 ]}
 
 \newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
 
