--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -73,6 +73,8 @@
 
 \newcommand{\exprel}[1]{\mathsf{ExpRel}[ #1 ]}
 
+\newcommand{\expseqrel}[2]{\mathsf{ExpSeqRel}[ #1, #2 ]}
+
 \newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
 
 \newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
@@ -159,6 +161,8 @@
 
 \newcommand{\subexps}[1]{\mathsf{SubExps}[ #1 ]}
 
+\newcommand{\subexpseqrels}[2]{\mathsf{SubExpsRels}[ #1, #2 ]}
+
 \newcommand{\subexpseqs}{\mathsf{ExpSeqs}}
 
 \newcommand{\symrels}[2]{\mathsf{SymRels}[ #1, #2 ]}
@@ -166,8 +170,6 @@
 \newcommand{\symstep}[1]{\mathsf{SymStep}[ #1 ]}
 
 \newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
-
-\newcommand{\symvarsidx}[2]{\mathsf{SymVarsIdx}[ #1, #2 ]}
 
 \newcommand{\tileind}{\mathsf{i}}
 
